updating documentation and formatting of footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer class="footer">
+<footer class="footer col-xs-12">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-md-4 col-lg-offset-1">
         <a class="logo selected" href="/">
           <img alt="Phi Kappa Tau" src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
         </a>
