--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,178 +7,153 @@ $H3_header: 1.7rem;
 $bottomHeight: 20rem;
 
 // Header
-//Color of background of the header
-body {
-  padding-top: 50px;
+//Helps describe where the logo, name and tag-line appear
+.header_style {
+  color: $White;
+  float: left;
+  padding-left: 10px;
 }
 
-.wide {
-  width:100%;
-  height:200px;
-  background-color: $HarvardRed;
-  background-size:cover;
+//How Phi Kappa Tau Looks
+.phitau_named{
+  padding-left: 10px;
+}
+//How Learning Leading Serving Looks
+.tag_line{
+  padding-left: 10px;
+  margin-top: 0px;
 }
 
+//Describes how the phi tau crest image looks
 .wide img {
   width: 6rem;
   height: auto;
 }
+//Hides background color when hovering over the header phi tau crest
+a.wide.img:hover{
+  background-color: transparent !important;
+}
+
+//How the header links look
 .navbar-inverse .navbar-nav > li > a{
   color: $White;
   font-size: 2rem;
 }
-.logo {
-  color:#fff;
-  font-weight:800;
-  font-size:14pt;
-  padding:25px;
-  text-align:center;
-}
 
-.line {
-  padding-top:20px;
-  white-space:no-wrap;
-  overflow:hidden;
-  text-align:center;
-}
+//Color of background of the header
 .navbar{
   background-color:  $HarvardRed;
 }
-
-//Div Display for Phi Kappa Tau \n Learning Leading Serving
-//Widith allows text to be seen in line on half the screen
-//inline-block and vertical middle help center the image and text
-//float left puts the text right next to it
-.phi_tau_text{
-  display: inline-block;
-  vertical-align: middle;
-  float: left;
-  position: absolute;
-}
-
-
-
-.h1-header {
-  color: $White;
-  font-size: $H1_header;
-  position: relative;
-  top: 1rem;
-}
-.h3-header {
-  color: $White;
-  font-size: $H3_header;
-}
-
-.nav-collapse, .nav-collapse.collapse {
-  overflow: visible;
-}
 //End of the header
+
 //Start of the footer
-a.wide.img:hover{
-  background-color: transparent !important;
-}
+//Hides the background color when hovering over the bottom links
 a.nav-item:hover{
 background-color: transparent !important;
 }
+
+//Hides background color when hovering over the footer phi tau crest
+// and the facebook and twitter links
 a.logo:hover{
-  background-color: transparent !important;
+background-color: transparent !important;
 }
+
 .footer {
-  margin-top: 19rem;
-  padding-top: 5px;
-  background-color: $FooterBackground;
+margin-top: 19rem;
+padding-top: 5px;
+background-color: $FooterBackground;
 }
 //End of the footer
 //Home Page
 .post_img{
-  width: 40%;
-  float: left;
-  height: auto;
+width: 40%;
+float: left;
+height: auto;
 
 }
 
 .post_text{
-  float: right;
-  width: 60%;
-  padding-left: 20px;
+float: right;
+width: 60%;
+padding-left: 20px;
 }
 
 .post_header{
-  text-align:center;
-  text-decoration: underline;
+text-align:center;
+text-decoration: underline;
 }
 
 .clear{
-  float: none;
-  clear:both;
+float: none;
+clear:both;
 }
 //End of Home PAge
 //Start of cards for user account page
 .user_img{
-  width: 50%;
-  float: left;
-  height: auto;
+width: 50%;
+float: left;
+height: auto;
 }
 
 .user_info{
-  float: right;
-  width: 50%;
-  padding-left: 20px;
+float: right;
+width: 50%;
+padding-left: 20px;
 }
 
 .padding-bot{
-  padding-bottom: 3rem;
+padding-bottom: 3rem;
 }
 //text changes
 .black_h2{
-  color: $Black;
+color: $Black;
 }
 //body
 .row {
-  margin-left: 0px;
-  margin-right: 0px;
-  padding-bottom: 3rem;
+margin-left: 0px;
+margin-right: 0px;
+padding-bottom: 3rem;
 }
 //end body
 
 
 body{
-  min-height: 100%;
+min-height: 100%;
 
 }
 //text alignment
 
 .navbar-right {
-  display: inline-block;
- }
+display: inline-block;
+}
 @media only screen and (min-width: 768px) {
-  .nav>li>a {
-    position: relative;
-    top: 30px;
-  }
+.nav>li>a {
+  position: relative;
+  top: 30px;
+}
 }
 
 @media (min-width: 768px) and (max-width: 1000px) {
-  .collapse {
-    display: none !important;
-  }
+.collapse {
+  display: none !important;
+}
 }
 
 .card {
-  padding:1.5rem;
-  box-shadow:0 10px 14px rgba(10,10,10,.6);
-  background: $White;
-  border-radius:3px;
-  animation:fly-in-from-left .5s 1s ease both;
-  transform-origin:top left;
-  margin: 0 auto;
-  padding-bottom: 3rem;
+padding:1.5rem;
+box-shadow:0 10px 14px rgba(10,10,10,.6);
+background: $White;
+border-radius:3px;
+animation:fly-in-from-left .5s 1s ease both;
+transform-origin:top left;
+margin: 0 auto;
+padding-bottom: 3rem;
 }
 
 hr {
-  display: block; height: 1px;
-  border: 0; border-top: 1px solid #000000;
-  margin: 1em 0; padding: 0;
+display: block; height: 1px;
+border: 0; border-top: 1px solid #000000;
+margin: 1em 0; padding: 0;
 }
 
 //Flipping Cards
@@ -187,33 +162,33 @@ hr {
 .flipping-cards label{  display:block; width:200px; height:250px; cursor:pointer;}
 
 .flipping-cards .wrapper{
-  display:block; width:200px; height:250px;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+display:block; width:200px; height:250px;
+-webkit-transform-style: preserve-3d;
+-moz-transform-style: preserve-3d;
+transform-style: preserve-3d;
 
-  -webkit-transition: all 2.50s;
-  -moz-transition: all .50s;
-  transition: all .50s;
+-webkit-transition: all 2.50s;
+-moz-transition: all .50s;
+transition: all .50s;
 }
 .flipping-cards .wrapper span{
-  display:block;
-  width:200px;
-  height:250px;
-  position:absolute;
-  top:0;
-  left:0;
+display:block;
+width:200px;
+height:250px;
+position:absolute;
+top:0;
+left:0;
 }
 
 .flipping-cards label .image{
 //  border-radius:10px;
-  -webkit-backface-visibility:hidden; /* Chrome and Safari */
-  -moz-backface-visibility:hidden; /* Firefox */
-  -ms-backface-visibility:hidden; /* Internet Explorer */
+-webkit-backface-visibility:hidden; /* Chrome and Safari */
+-moz-backface-visibility:hidden; /* Firefox */
+-ms-backface-visibility:hidden; /* Internet Explorer */
 
-  //background-image: repeating-linear-gradient(120deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px), repeating-linear-gradient(60deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px), linear-gradient(60deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1)), linear-gradient(120deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
-  background-size: 70px 120px;
-  background-image: url("http://americanmuslimconsumer.com/wp-content/uploads/2013/09/blank-user.jpg");
+//background-image: repeating-linear-gradient(120deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px), repeating-linear-gradient(60deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px), linear-gradient(60deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1)), linear-gradient(120deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
+background-size: 70px 120px;
+background-image: url("http://americanmuslimconsumer.com/wp-content/uploads/2013/09/blank-user.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   -o-background-size: 100% 100%, auto;
@@ -522,3 +497,24 @@ body {
   height: 400px;
   width: 100%;
 }
+
+
+//.logo {
+//  color:#fff;
+//  font-weight:800;
+//  font-size:14pt;
+//  padding:25px;
+//  text-align:center;
+//}
+//.line {
+//  padding-top:20px;
+//  white-space:no-wrap;
+//  overflow:hidden;
+//  text-align:center;
+//}
+//.wide {
+//  width:100%;
+//  height:200px;
+//  background-color: $HarvardRed;
+//  background-size:cover;
+//}
