--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,26 +94,42 @@ background-color: $FooterBackground;
 //End of the footer
 
 //Home Page
+//Padding on the unmoveable card
+.top-card-padding{
+  padding-top: 4rem;
+  padding-bottom: 3rem;
+}
+
+//picture on the cards
 .post_img{
 width: 40%;
 float: left;
 height: auto;
 }
 
+//text on the cards
 .post_text{
 float: right;
 width: 60%;
 padding-left: 20px;
 }
 
+//Title formatting
 .post_header{
 text-align:center;
 text-decoration: underline;
 }
 
+//Without this the content won't stay in the card
 .clear{
 float: none;
 clear:both;
+}
+
+//Centers the paginate text
+.center-paginate {
+  float: none;
+  margin: 0 auto;
 }
 //End of Home PAge
 //Start of cards for user account page
@@ -129,9 +145,6 @@ width: 50%;
 padding-left: 20px;
 }
 
-.padding-bot{
-padding-bottom: 3rem;
-}
 //text changes
 .black_h2{
 color: $Black;
@@ -420,7 +433,6 @@ ________________________________________*/
   margin: 0 auto;
 }
 
-.center-block {float: none; margin: 0 auto;}
 
 .col-md-3{
   float: none;
