fixed some html on contact page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<div class="col-md-6 center-block row">
+<div class="row">
+<div class="col-md-8 col-md-offset-2 center-block">
   <div class="card">
   <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
   <div>
@@ -21,3 +22,4 @@
   <br>
 </div>
   </div>
+    </div>
