--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -40,7 +40,7 @@
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;word-wrap: break-word;">
             <h2><%= position.first.role == "admin" ? "Web Master" : position.first.role.slice(0,1).capitalize %> <%= position.first.role == "admin" ? "" : position.first.role.slice(1..-1)%></h2>
-            <h3><%= position.first.first_name if position.first.first_name? %> <%= " " + position.first.last_name if position.first.last_name? %></h3>
+            <h3><%= position.first.first_name if position.first.first_name? %> <%= position.first.last_name if position.first.last_name? %></h3>
             <h2>Email</h2>
             <h3 style="color: #ffffff !important;"><%= mail_to position.first.email %></h3>
           </span>
