--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,47 +1,49 @@
-
-<div class="container">
-  <h1 style="width: 41%; margin: 0 auto;">
+<div class="row col-md-12">
+  <h1 align="center" class="col-md-6 col-md-offset-3 top-card-padding">
     Frequently Asked Questions
   </h1>
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <!-- Nav tabs category -->
-      <ul class="nav nav-tabs faq-cat-tabs">
-        <li class="active"><a href="#faq-cat-1" data-toggle="tab"><%= @faq_categories.first.title %></a></li>
-        <% @faq_categories.each do |category| %>
-            <% next if category.id == 1 %>
-            <li><a href="#faq-cat-<%= category.id %>" data-toggle="tab"><%= category.title %></a></li>
-        <% end %>
-      </ul>
+  <div class="col-md-6 col-md-offset-3">
+    <!-- Nav tabs category -->
+    <ul class="nav nav-tabs faq-cat-tabs">
+      <li class="active">
+        <a href="#faq-cat-<%= @faq_categories.first.id %>" data-toggle="tab"><%= @faq_categories.first.title %></a>
+      </li>
+      <% @faq_categories.each do |category| %>
+        <% next if category.id == 1 %>
+        <li>
+          <a href="#faq-cat-<%= category.id %>" data-toggle="tab"><%= category.title %></a>
+        </li>
+      <% end %>
+    </ul>
 
-      <!-- Tab panes -->
-      <div class="tab-content faq-cat-content">
-            <% @faq_categories.each_with_index do |category, index| %>
-                <div class="tab-pane<% if index == 0 %> active in fade<% end %>" id="faq-cat-<%= category.id %>">
-                  <div class="panel-group" id="accordion-cat-<%= category.id %>">
-                    <% category.faq_questions.each do |question| %>
-                    <div class="panel panel-default panel-faq">
-                      <div class="panel-heading">
-                        <a data-toggle="collapse" data-parent="#accordion-cat-<%= category.id %>" href="#faq-cat-<%= category.id %>-sub-<%= question.id %>">
-                          <h4 class="panel-title">
-                            <%= question.title %>
-                            <span class="pull-right"><i class="glyphicon glyphicon-plus"></i></span>
-                          </h4>
-                        </a>
-                      </div>
-                      <div id="faq-cat-<%= category.id %>-sub-<%= question.id %>" class="panel-collapse collapse">
-                        <div class="panel-body"><%= question.content.html_safe %>
-                        </div>
-                      </div>
-                    </div>
-                <% end %>
+    <!-- Tab panes -->
+    <div class="tab-content faq-cat-content">
+      <% @faq_categories.each_with_index do |category, index| %>
+        <div class="tab-pane<% if index == 0 %> active in fade<% end %>" id="faq-cat-<%= category.id %>">
+          <div class="panel-group" id="accordion-cat-<%= category.id %>">
+            <% category.faq_questions.each do |question| %>
+              <div class="panel panel-default panel-faq">
+                <div class="panel-heading">
+                  <a data-toggle="collapse" data-parent="#accordion-cat-<%= category.id %>" href="#faq-cat-<%= category.id %>-sub-<%= question.id %>">
+                    <h4 class="panel-title">
+                      <%= question.title %>
+                      <span class="pull-right"><i class="glyphicon glyphicon-plus"></i></span>
+                    </h4>
+                  </a>
+                </div>
+                <div id="faq-cat-<%= category.id %>-sub-<%= question.id %>" class="panel-collapse collapse">
+                  <div class="panel-body"><%= question.content.html_safe %>
+                  </div>
+                </div>
               </div>
-            </div>
-        <% end %>
-      </div>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
+
 <script>
     $(document).ready(function() {
         $('.collapse').on('show.bs.collapse', function() {
