--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,28 @@
 <div class="row">
-<div class="col-md-8 col-md-offset-2 center-block">
-  <div class="card">
-  <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
-  <div>
-    <%= image_tag @user.profile_picture_url, :class => "user_img" if @user.profile_picture? %>
-  </div>
-  <div class="user_info">
-    <p>Name: <%= @user.first_name if @user.first_name? %> <%= " " + @user.last_name if @user.last_name? %></p>
-    <p>Email: <%= @user.email %></p>
-    <p>Website Status: <%= @user.role.slice(0,1).capitalize if @user.role? %><%= @user.role.slice(1..-1) if @user.role? %></p>
-    <p>Phone Number: <%= @user.phone_number if @user.phone_number?%></p>
-    <p>Home Town: <%= @user.home_town if @user.home_town?%><%= ", " + @user.state if @user.state?%></p>
-    <p>Pledge Class: <%= @user.pledge_class if @user.pledge_class?%></p>
-    <p>Major: <%= @user.major if @user.major?%></p>
-    <p>Big Brother: <%= @user.big_brother if @user.big_brother?%></p>
-  </div>
-  <div style="float: none; clear:both;"> </div>
-  <div style="float: right;">
-    <%= link_to "Edit Info", edit_user_path(@user) %>
-  </div>
-  <br>
-</div>
-  </div>
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1 class="card_header">Your Info</h1>
+      <div>
+        <!--Users picture-->
+        <%= image_tag @user.profile_picture_url, :class => "user_img" if @user.profile_picture? %>
+      </div>
+      <!--User info-->
+      <div class="user_info">
+        <p>Name: <%= @user.first_name if @user.first_name? %> <%= " " + @user.last_name if @user.last_name? %></p>
+        <p>Email: <%= @user.email %></p>
+        <p>Website Status: <%= @user.role.slice(0,1).capitalize if @user.role? %><%= @user.role.slice(1..-1) if @user.role? %></p>
+        <p>Phone Number: <%= @user.phone_number if @user.phone_number?%></p>
+        <p>Home Town: <%= @user.home_town if @user.home_town?%><%= ", " + @user.state if @user.state?%></p>
+        <p>Pledge Class: <%= @user.pledge_class if @user.pledge_class?%></p>
+        <p>Major: <%= @user.major if @user.major?%></p>
+        <p>Big Brother: <%= @user.big_brother if @user.big_brother?%></p>
+      </div>
+      <!--makes sure everything stays on the page-->
+      <div class="clear"> </div>
+      <div>
+        <%= link_to "Edit Info", edit_user_path(@user), :class => "push_link_right" %>
+      </div>
+      <br>
     </div>
+  </div>
+</div>
